# gaussdb-diesel

./: .gitignore  CHANGELOG.md  CONTRIBUTING_zh.md  Cargo.toml  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  README_zh.md  docker-compose.test.yml  plan4.md  plan7.md  pr.md
.github/workflows/: README.md  ci.yml  code-quality.yml  dependencies.yml  nightly.yml  release.yml
docker/: docker-compose.yml
docs/: README.md  STYLE_GUIDE.md
docs/en/: README.md
docs/en/guides/: getting-started.md
docs/zh/: README.md
docs/zh/api/: README.md
docs/zh/examples/: basic-crud.md
docs/zh/guides/: configuration.md  getting-started.md
examples/: README.md  advanced_queries_example.rs  performance_benchmark.rs  production_ready_example.rs  type_system_validation.rs
examples/01-basic-usage/: Cargo.toml
examples/01-basic-usage/src/: main.rs
examples/02-advanced-queries/: Cargo.toml  README.md
examples/02-advanced-queries/src/: main.rs
examples/03-web-application/: Cargo.toml  README.md
examples/03-web-application/src/: main.rs
examples/04-real-world-blog/: Cargo.toml  README.md
examples/04-real-world-blog/src/: main.rs
examples/05-ecommerce-system/: Cargo.toml
examples/05-ecommerce-system/src/: database_manager.rs  main.rs  models.rs  schema.rs  services.rs
examples/05-performance-testing/: Cargo.toml  README.md
examples/05-performance-testing/src/: main.rs
examples/basic_usage/: Cargo.toml  README.md
examples/basic_usage/src/: main.rs
scripts/: init-test-db.sql  quick-test.sh  run-real-tests.sh  validate-workflows.sh
src/: backend.rs  lib.rs  metadata_lookup.rs  monitoring.rs  performance.rs  pool.rs
src/connection/: cursor.rs  loading_mode.rs  mod.rs  raw.rs  result.rs  row.rs  stmt.rs
src/expression/: array_comparison.rs  array_ops.rs  expression_methods.rs  mod.rs
src/expression/functions/: date_and_time.rs  math.rs  string.rs
src/query_builder/: cte.rs  distinct_on.rs  limit_offset_impl.rs  mod.rs  query_fragment_impls.rs  returning.rs  subquery.rs  window_functions.rs
src/query_builder/copy/: copy_from.rs  copy_to.rs  mod.rs
src/serialize/: mod.rs  write_tuple.rs
src/types/: custom.rs  date_and_time.rs  json.rs  mac_addr_8.rs  multirange.rs  numeric.rs  primitives.rs  ranges.rs  sql_types.rs  uuid.rs
tests/: array_operations_test.rs  copy_operations_test.rs  cursor_test.rs  diesel_integration.rs  expression_methods_test.rs  gaussdb_api_test.rs  gaussdb_connection_verification.rs  integration_testcontainers.rs  loading_mode_test.rs  real_database_test.rs  real_gaussdb_integration_test.rs
