[package]
name = "diesel-gaussdb"
version = "0.1.0-alpha"
authors = ["Diesel GaussDB Contributors"]
description = "GaussDB backend for Diesel ORM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/diesel-rs/diesel-gaussdb"
documentation = "https://docs.rs/diesel-gaussdb"
keywords = ["database", "orm", "gaussdb", "opengauss", "diesel"]
categories = ["database"]
readme = "README.md"
edition = "2021"
rust-version = "1.70"

[dependencies]
diesel = { version = "2.2.12", default-features = false, features = ["postgres_backend", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
# Using real gaussdb crate for GaussDB connectivity
gaussdb = { version = "0.1.0", optional = true }
tokio-gaussdb = { version = "0.1.0", optional = true }
# Fallback to postgres for compatibility testing
postgres = { version = "0.19", optional = true }
tokio-postgres = { version = "0.7", optional = true }
url = "2.0"
r2d2 = { version = "0.8", optional = true }
tokio = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }
uuid = { version = "1.0", optional = true }
ipnetwork = { version = "0.20", optional = true }
quickcheck = { version = "1.0", optional = true }
bigdecimal = { version = "0.4", optional = true }
bitflags = "2.0"
byteorder = "1.0"
itoa = "1.0"
fallible-iterator = "0.2"

[dev-dependencies]
dotenvy = "0.15"
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["with-deprecated", "gaussdb"]
gaussdb_backend = []
gaussdb = ["dep:gaussdb"]
tokio-gaussdb = ["dep:tokio-gaussdb", "tokio"]
postgres = ["dep:postgres"]
tokio-postgres = ["dep:tokio-postgres", "tokio"]
async = ["tokio-gaussdb"]
chrono = ["dep:chrono", "diesel/chrono"]
uuid = ["dep:uuid", "diesel/uuid"]
serde_json = ["dep:serde_json", "serde", "diesel/serde_json"]
bigdecimal = ["dep:bigdecimal", "diesel/numeric"]
with-deprecated = ["diesel/with-deprecated"]
extras = ["chrono", "uuid", "serde_json", "bigdecimal"]
r2d2 = ["dep:r2d2"]
ipnetwork = ["dep:ipnetwork"]
quickcheck = ["dep:quickcheck"]
